--- a/mobile.css
+++ b/mobile.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 @media only screen and (max-width: 768px) {
     header .navbar-brand {
       padding-left: 1rem;
